# polylib

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
Test/Zpolytest/: Makefile.am  ZDiff3.out
Test/Zpolytest_bugs/: armin.c  int_ker.c  int_ket.c
applications/: testCompressParms.c
cln/: autogen.sh  configure.ac
cln/m4/: cln.m4
doc/: Changes  INSTALL
include/polylib/: Lattice.h  Makefile.am  Matop.h  SolveDio.h  Zpolyhedron.h  alpha.h  arithmetic_errors.h  arithmetique.h  compress_parms.h  ehrhart.h  eval_ehrhart.h  ext_ehrhart.h  homogenization.h  matrix.h  matrix_addon.h  matrix_permutations.h  polyhedron.h  polylibgmp.h  polyparam.h  ranking.h  types.h  vector.h
source/: count.c  oldpolytest.c
source/arith/: assert.h  errors.c
source/ehrhart/: ehrhart.c  eval_ehrhart.c  ext_ehrhart.c  homogenization.c  ranking.c
source/kernel/: Lattice.c  Matop.c  NormalForms.c  SolveDio.c  Zpolyhedron.c  alpha.c  compress_parms.c  errormsg.c  matrix.c  matrix_addon.c  matrix_permutations.c  param.c  polyhedron.c  polyparam.c  vector.c
